<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.EditarActivity">
    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_heading_editar"
            android:textAlignment="center"
            android:textSize="@dimen/text_heading"
            android:textStyle="bold"
            android:text="@string/titulo_editar"
            android:padding="20dp"
            android:layout_marginBottom="@dimen/margin_lg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_md"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_nombre"
                android:text="@string/lbl_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/input_nombres"
                android:hint="@string/input_nombres_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_md"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_apellidos"
                android:text="@string/lbl_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/input_apellidos"
                android:hint="@string/input_apellidos_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_md"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_dni"
                android:text="@string/lbl_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="phone"
                android:id="@+id/input_dni"
                android:maxLength="8"
                android:hint="@string/input_dni_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_md"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_linea_credito"
                android:text="@string/lbl_linea_credito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="phone"
                android:id="@+id/input_credito"
                android:hint="@string/input_linea_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:text="@string/btn_editar_cancelar"
                android:textStyle="bold"
                android:id="@+id/btn_cancelar_editar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                />
            <Button
                android:id="@+id/btn_guardar_editar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/btn_guardar_editar"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>