<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="@integer/material_motion_duration_long_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_dni"
            android:text="@string/tv_dni"
            android:textSize="@dimen/text_caption"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_cliente"
            android:text="@string/tv_cliente"
            android:textSize="@dimen/text_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_acciones"
        android:text="@string/btn_acciones"
        android:textSize="@dimen/text_caption"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>